# torchsparse

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
docs/: pts_format.md
docs/source/: api_reference.rst  conf.py  index.rst  installation.md
tests/: test.py
tests/python/: __init__.py  test_io.py  test_torchscript.py
torchsparse/: __init__.py  backends.py  io.py  script.py  tensor.py
torchsparse/backend/: sparse_tensor_class.h  torch_library.cu
torchsparse/backend/hashmap/: hashmap_cuda.cuh
torchsparse/backend/others/: sparsemapping_cuda.cu
